--- a/browny-v1.0/index.html
+++ b/browny-v1.0/index.html
@@ -562,7 +562,7 @@
 				<div class="return-to-top">
 					<i class="fa fa-angle-up " id="scroll-top" ></i>
 				</div>				
-			</div><!--/.scroll-Top-->
+			</div><!--/.scroll-Tddop-->
         </footer><!--/.footer-copyright-->
 		<script src="assets/js/jquery.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
